@@ -1,3 +1,5 @@
+- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the active customer is found. If it is not, throw exception [#qubIT-Fenix-6386]
+
 7.21.3 (12-12-2024)
 - Refactor: Delete SAS/SICABE JSP and controllers [#qubIT-Fenix-6343]
 
